--- a/index.html
+++ b/index.html
@@ -3,12 +3,73 @@
 <head>
   <title>Google</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
 </head>
 <body>
+<header id="topbar">
+  <ul>
+    <li>
+      <a href="#">Gmail</a>
+    </li>
+    <li>
+      <a href="#">Images</a>
+    </li>
+    <li>
+      <a href="#">
+        <img src="show-apps-button.png" id="apps-logo"/>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <img src="profile-pic.jpg" id="profile-pic"/>
+      </a>
+    </li>
+  </ul>
+</header>
+<main>
   <div>
-    <a href="#">Gmail</a>
-    <a href="#">Images</a>
-    <img src="google-homepage/show-apps-button.png">
+      <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="logo"/>
   </div>
+  <div>
+    <input name="search" type="search" id="search-bar">
+  </div>
+  <div>
+    <div class="button">Google Search</div>
+    <div class="button">I'm Feeling Lucky</div>
+  </div>
+  <div>
+    <p>Google offered in: <a href="#">Hausa</a> <a href="#">Igbo</a> <a href="#">Yoruba</a> <a href="#">Pidgin</a></p>
+  </div>
+</main>
+<footer>
+  <nav class="footer">
+  <div>
+    <ul>
+      <li>
+        <a href="#">Settings</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>
+        <a href="#">Privacy</a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <ul>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">Business</a>
+      </li>
+      <li>
+        <a href="#">Advertising</a>
+      </li>
+    </ul>
+    </div>
+  </nav>
+</footer>
 </body>
 </html>
