Finished the search bar and adjusted the footer

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="logo"/>
   </div>
   <div>
-    <input name="search" type="search" id="search-bar">
+    <input name="search" type="search" id="">
   </div>
   <div>
     <div class="button">Google Search</div>
     <div class="button">I'm Feeling Lucky</div>
   </div>
   <div>
-    <p>Google offered in: <a href="#">Hausa</a> <a href="#">Igbo</a> <a href="#">Yoruba</a> <a href="#">Pidgin</a></p>
+    <p>Google offered in: <a href="#" style="color:blue">Hausa</a> <a href="#" style="color:blue">Igbo</a> <a href="#" style="color:blue">Yoruba</a> <a href="#" style="color:blue">Pidgin</a></p>
   </div>
 </main>
 <footer>
